--- a/resources/style.css
+++ b/resources/style.css
@@ -2,7 +2,7 @@ html{
     background-color: black;
 }
 
-h1{
+h1, .second-h1{
     font-family: Verdana;
     text-align: center;
     color: white;
