--- a/resources/style.css
+++ b/resources/style.css
@@ -2,7 +2,7 @@ html{
     background-color: black;
 }
 
-h1, .guide{
+h1{
     font-family: Verdana;
     text-align: center;
     color: white;
@@ -22,3 +22,8 @@ video{
     top: 20px;
 }
 
+.main{
+    font-weight: 300;
+    font-size: 42px;
+    font-family: Verdana;
+}
