--- a/resources/style.css
+++ b/resources/style.css
@@ -28,4 +28,21 @@ video{
     font-family: Verdana;
     text-align: center;
     color: white;
+    padding-top: 50px;
+}
+
+p{
+    font-family: Verdana;
+    color: gray;
+    font-size: 21px;
+    text-align: center;
+}
+
+.demo{
+    position: relative;
+    left: 173px;
+}
+
+.logo{
+    text-align: center;
 }
