--- a/resources/style.css
+++ b/resources/style.css
@@ -14,6 +14,7 @@ h1{
     color:aquamarine;
     text-align: center;
     font-size: 16px;
+    font-family: Verdana;
 }
 
 video{
@@ -38,11 +39,38 @@ p{
     text-align: center;
 }
 
-.demo{
+img.demo{
     position: relative;
     left: 173px;
 }
 
-.logo{
+img.logo{
+    position: relative;
+    top:130px;
+    left: -335px;
+}
+
+.final{
+    position: relative;
+    top: 130px;
+}
+
+.final-d-link{
+    color:aquamarine;
     text-align: center;
+    font-size: 16px;
+    font-family: Verdana;
+    position: relative;
+    top:150px;
+}
+
+h2{
+    text-align: right;
+    color: gray;
+    font-family: Verdana;
+    font-size: 21px;
+    font-weight: 500;
+    position: relative;
+    top: 140px;
+    padding-bottom: 20px;
 }
